fix most deprecation warnings for current gradle and Java 21